FE_V3 [Header] fix/searchBar was not centered and width wrong

--- a/src/components/AppHeader/style.scss
+++ b/src/components/AppHeader/style.scss
@@ -35,6 +35,7 @@
 
   &__searchBarContainer {
     display: flex;
+    align-items: center;
     flex-direction: column;
     margin-bottom: 1rem;
     width: vars.$searchBarHeaderWidthMobile;
@@ -157,6 +158,8 @@
 
     @media (width > 480px) {
       width: vars.$searchBarHeaderWidthDesktop;
+      max-width: 600px;
+      margin-left: 1rem;
     }
 
     & form {
